CREATE SCHEMA tenant;

CREATE SCHEMA management;

CREATE TYPE privacyLevel AS ENUM (
  'onlyMe',
  'friends',
  'closeFriends',
  'relatives',
  'colleagues',
  'seconLevelFriends'
);

CREATE TYPE friendshipType AS ENUM (
  'friend',
  'relative',
  'closeFriend',
  'colleague'
);

CREATE TABLE management."profile" (
  "id" uuid PRIMARY KEY NOT NULL,
  "name" varchar(50) NOT NULL,
  "alias" varchar(50) NOT NULL,
  "privacy" friendshipType NOT NULL,
  "last_update_at" date NOT NULL,
  "creation_date" date NOT NULL
);

CREATE TABLE management."identityProvider" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "profile_id" uuid NOT NULL,
  "provider_name" varchar(50) NOT NULL,
  "last_update_at" date NOT NULL,
  "creation_date" date NOT NULL
);

CREATE TABLE management."friendship" (
  "profile_id" uuid NOT NULL,
  "friend_id" uuid NOT NULL,
  "creation_date" date NOT NULL,
  "relationship" friendshipType NOT NULL,
  PRIMARY KEY ("profile_id", "friend_id")
);

CREATE TABLE tenant."momentSpace" (
  "id" uuid PRIMARY KEY NOT NULL,
  "profile_id" uuid NOT NULL,
  "name" varchar(50) NOT NULL,
  "creation_date" date NOT NULL
);

CREATE TABLE tenant."moment" (
  "id" uuid PRIMARY KEY NOT NULL,
  "momentSpace_id" uuid NOT NULL,
  "audience" privacyLevel NOT NULL,
  "name" varchar(50) NOT NULL,
  "created_at" date NOT NULL,
  "created_by" uuid NOT NULL,
  "last_update_at" date NOT NULL,
  "last_update_by" uuid NOT NULL
);

CREATE TABLE tenant."post" (
  "id" uuid PRIMARY KEY NOT NULL,
  "created_at" date NOT NULL,
  "last_update_by" uuid NOT NULL,
  "last_update_at" date NOT NULL,
  "partitionKey" uuid NOT NULL
);

CREATE TABLE tenant."post2moment" (
  "post_id" uuid NOT NULL,
  "moment_id" uuid NOT NULL,
  "audience" privacyLevel NOT NULL,
  "created_at" date NOT NULL,
  "created_by" uuid NOT NULL,
  PRIMARY KEY ("post_id", "moment_id")
);

CREATE UNIQUE INDEX "friendshipIndex" ON management."friendship" ("profile_id", "relationship");

CREATE INDEX "momentSpaceIndex" ON tenant."momentSpace" ("profile_id");

CREATE UNIQUE INDEX "momentAudienceIndex" ON tenant."moment" ("audience", "momentSpace_id", "id");

COMMENT ON TABLE management."identityProvider" IS 'Allow sign-in with a third-party provider: Facebook, Google, ...';

COMMENT ON COLUMN tenant."post"."id" IS 'Identifier of the post';

ALTER TABLE management."identityProvider" ADD FOREIGN KEY ("profile_id") REFERENCES management."profile" ("id");

ALTER TABLE management."friendship" ADD FOREIGN KEY ("profile_id") REFERENCES management."profile" ("id");

ALTER TABLE management."friendship" ADD FOREIGN KEY ("friend_id") REFERENCES management."profile" ("id");

ALTER TABLE tenant."momentSpace" ADD FOREIGN KEY ("profile_id") REFERENCES management."profile" ("id");

ALTER TABLE tenant."moment" ADD FOREIGN KEY ("momentSpace_id") REFERENCES tenant."momentSpace" ("id");

ALTER TABLE tenant."post2moment" ADD FOREIGN KEY ("post_id") REFERENCES tenant."post" ("id");

ALTER TABLE tenant."post2moment" ADD FOREIGN KEY ("moment_id") REFERENCES tenant."moment" ("id");